@@ -36,7 +36,7 @@ add_new_url = params_for(:action => 'edit_associated', :child_association => col
       <% if remote_controller and remote_controller.respond_to? :uses_record_select? and remote_controller.uses_record_select? -%>
         <%= link_to_record_select as_(:add_existing), remote_controller.controller_path, :onselect => "ActiveScaffold.record_select_onselect(#{edit_associated_url.to_json}, #{active_scaffold_id.to_json}, id);" -%>
       <% else -%>
-        <% select_options = options_for_select(options_for_association(column.association)) 
+        <% select_options = options_from_collection_for_select(sorted_association_options_find(column.association), :id, :to_label)
            add_existing_id = "#{sub_form_id(:association => column.name)}-add-existing" %>
         <%= select_tag 'associated_id', '<option value="">'.html_safe + as_(:_select_) + '</option>'.html_safe + select_options %>
         <%= link_to as_(:add_existing), edit_associated_url, :id => add_existing_id, :remote => true, :class=> column.plural_association? ? 'as_add_existing' : 'as_replace_existing', :style => "display: none;" %>
